--- a/style.css
+++ b/style.css
@@ -4,11 +4,45 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
-    padding: 16px;
-}
+    padding:16px;
+    font-family: Arial, Helvetica, sans-serif;
 
-.card{ 
-    background-color: white; 
+    
+    }
+.card{
+    background-color: #f8f8f8;
+    border-radius: 16px;
     padding: 32px;
-    border-radius: 16px;}
-   
+    flex-basis: 616px;
+    
+}
+.card__article{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap:24px;
+}
+.card__info{
+    flex-basis: 380px;
+    flex-grow: 1;
+}
+.card__description{
+    line-height: 22px;
+    margin: 0;
+    
+}
+.card__link{
+    color:red;
+    text-decoration: none;
+}
+.card__name{
+    font-size: 36px;
+    font-weight: 400;
+    margin:0;
+}
+.card__position{
+    font-style: italic;
+    font-size: 18px;
+    margin:0;
+}
